# Give here the list of existing tests-scripts
SHORT_TESTDIRS = ascii2yaml \
				 poscar2yaml \
				 poscar2ascii \
				 geometry2poscar \
				 aims2yaml \
				 ascii2findsym \
				 bdft2yaml \
				 bin2ascii \
				 bin2yaml \
				 geometry2yaml \
				 geometry2ascii \
				 poscar2geometry \
				 poscar2shengbte

LONG_TESTDIRS = $(SHORT_TESTDIRS)

EXTRA_DIST = 

pythondir = $(FUTILE)/install/lib/python$(PYTHON_VERSION)/site-packages

include $(srcdir)/check.mk
