# Give here the list of existing tests-scripts
SHORT_TESTDIRS = ascii2yaml \
				 poscar2yaml \
				 poscar2ascii \
				 geometry2poscar \
				 aims2yaml \
				 ascii2findsym \
				 bdft2yaml \
				 bin2ascii \
				 bin2yaml \
				 geometry2yaml \
				 geometry2ascii \
				 poscar2geometry \
				 poscar2shengbte \
				 yaml2ascii \
				 yaml2geometry \
				 yaml2poscar \
				 ascii2poscar \
				 yaml2xyz \
				 yaml_rep \
				 yaml_scale_single \
				 yaml_set_cell_cm

LONG_TESTDIRS = $(SHORT_TESTDIRS)

EXTRA_DIST = 

pythondir = $(FUTILE)/install/lib/python$(PYTHON_VERSION)/site-packages

include $(srcdir)/check.mk
